--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
@@ -34,6 +36,27 @@
 
                     <div class="col-1">
                         <!-- The number of likes goes before the closing strong tag -->
+                        {% if user.is_authenticated %}
+                        <form action="{% url 'post_like' post.slug %}" class="d-inline" method="POST">
+                            {% csrf_token %}
+
+                            {% if liked %}
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
+                                    class="fas fa-heart"></i></button>
+                            {% else %}
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
+                                    class="far fa-heart"></i></button>
+                            {% endif %}
+
+                        </form>
+                        {% else %}
+
+                        <span class="text-secondary">
+                            <i class="far fa-heart">
+
+                            </i>
+                        </span>
+                        {% endif %}
                         <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
                     </div>
                     <div class="col-1">
@@ -76,10 +99,37 @@
         </div>
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
-                <!-- For later -->
+
+                {% if commented %}
+                <div class="alert alert-success" role="alert" id="comment">
+                    Your comment is awaiting approval
+                </div>
+                {% else %}
+                {% if user.is_authenticated %}
+
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    {{ comment_form | crispy }}
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+                {% endif %}
+                {% endif %}
+
             </div>
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+<script>
+
+    setTimeout(() => {
+        $('#comment').hide()
+    }, 3000);
+
+</script>
 
 {% endblock content %}
